--- a/src/node/webapp/index.html
+++ b/src/node/webapp/index.html
@@ -21,6 +21,7 @@
       ipcRenderer
     } = require('electron');
     var server = require('../server/index.js');
+    const shell = require('electron').shell;
     var store = require('../lib/store.js').instance();    
     const {dialog} = require('electron').remote;
   </script>
