--- a/src/node/webapp/framework/custom/server-container/server-container.html
+++ b/src/node/webapp/framework/custom/server-container/server-container.html
@@ -246,12 +246,12 @@
         background: #3c6358 !important;
     }
 
-.link{
-    text-decoration: underline;
-    color:blue;
-    cursor:pointer;
-    display:inline-block;
-}
+    .link {
+        text-decoration: underline;
+        color: blue;
+        cursor: pointer;
+        display: inline-block;
+    }
 
     @media only screen and (max-height: 590px) {
         #credits {
@@ -300,9 +300,11 @@
         </br>
         It is licensed under MIT license.</br>
         </br>
-        Developed by <div class="link" onclick="shell.openExternal('http://jperefel.com');">Jesús Pérez Felipe</div>.</br>
-    </br>
-        Find the project on <div class="link" onclick="shell.openExternal('https://github.com/jesusvimlet/multiserver');">GitHub</div>.
+        Developed by
+        <div class="link" onclick="shell.openExternal('http://jperefel.com');">Jesús Pérez Felipe</div>.</br>
+        </br>
+        Find the project on
+        <div class="link" onclick="shell.openExternal('https://github.com/jesusvimlet/multiserver');">GitHub</div>.
     </div>
     <div id="content">
         <vc-button id="add" value="Add" onclick="document.querySelector('server-container').add();"></vc-button>
